--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -10,9 +10,9 @@ jobs:
         uses: actions/checkout@master
 
       - name: Setup Go
-        uses: actions/setup-go@v2-beta
+        uses: actions/setup-go@v2
         with:
-          go-version: "^1.13.8"
+          go-version: "^1.17.6"
 
       - run: go build -o apkrash_darwin_386
         env:
