--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -8,181 +8,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@master
+        
+      - name: Fetch all tags
+        run: git fetch --force --tags
 
       - name: Setup Go
         uses: actions/setup-go@v3
         with:
           go-version: "^1.17.6"
 
-      - run: go build -o apkrash_darwin_arm64
-        working-directory: "cmd/"
-        env:
-          GOOS: "darwin"
-          GOARCH: "arm64"
-          CGO_ENABLED: 0
-
-      - uses: actions/upload-artifact@v1
+      - name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
         with:
-          name: apkrash_darwin_arm64
-          path: cmd/apkrash_darwin_arm64
-
-      - run: go build -o apkrash_darwin_amd64
-        working-directory: "cmd/"
-        env:
-          GOOS: "darwin"
-          GOARCH: "amd64"
-          CGO_ENABLED: 0
-
-      - uses: actions/upload-artifact@v1
-        with:
-          name: apkrash_darwin_amd64
-          path: cmd/apkrash_darwin_amd64
-
-      - run: go build -o apkrash_linux_386
-        working-directory: "cmd/"
-        env:
-          GOOS: "linux"
-          GOARCH: "386"
-          CGO_ENABLED: 0
-
-      - uses: actions/upload-artifact@v1
-        with:
-          name: apkrash_linux_386
-          path: cmd/apkrash_linux_386
-
-      - run: go build -o apkrash_linux_amd64
-        working-directory: "cmd/"
-        env:
-          GOOS: "linux"
-          GOARCH: "amd64"
-          CGO_ENABLED: 0
-
-      - uses: actions/upload-artifact@v1
-        with:
-          name: apkrash_linux_amd64
-          path: cmd/apkrash_linux_amd64
-
-      - run: go build -o apkrash_windows_386
-        working-directory: "cmd/"
-        env:
-          GOOS: "windows"
-          GOARCH: "386"
-          CGO_ENABLED: 0
-
-      - uses: actions/upload-artifact@v1
-        with:
-          name: apkrash_windows_386
-          path: cmd/apkrash_windows_386
-
-      - run: go build -o apkrash_windows_amd64
-        working-directory: "cmd/"
-        env:
-          GOOS: "windows"
-          GOARCH: "amd64"
-          CGO_ENABLED: 0
-
-      - uses: actions/upload-artifact@v1
-        with:
-          name: apkrash_windows_amd64
-          path: cmd/apkrash_windows_amd64
-
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag_name: ${{ github.run_id }}_${{ github.run_number }}
-          release_name: Release ${{ github.run_id }}_${{ github.run_number }}
-          draft: false
-          prerelease: false
-
-      - uses: actions/download-artifact@v1
-        with:
-          name: apkrash_darwin_arm64
-
-      - uses: actions/download-artifact@v1
-        with:
-          name: apkrash_darwin_amd64
-
-      - uses: actions/download-artifact@v1
-        with:
-          name: apkrash_linux_386
-
-      - uses: actions/download-artifact@v1
-        with:
-          name: apkrash_linux_amd64
-
-      - uses: actions/download-artifact@v1
-        with:
-          name: apkrash_windows_386
-
-      - uses: actions/download-artifact@v1
-        with:
-          name: apkrash_windows_amd64
-
-      - name: Upload Release Assets - Darwin ARM64
-        uses: actions/upload-release-asset@v1
+          distribution: goreleaser
+          version: latest
+          args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: apkrash_darwin_arm64/apkrash_darwin_arm64
-          asset_name: apkrash_darwin_arm64
-          asset_content_type: application/octet-stream
-
-
-      - name: Upload Release Assets - Darwin amd64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: apkrash_darwin_amd64/apkrash_darwin_amd64
-          asset_name: apkrash_darwin_amd64
-          asset_content_type: application/octet-stream
-
-      - name: Upload Release Assets - Linux 386
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: apkrash_linux_386/apkrash_linux_386
-          asset_name: apkrash_linux_386
-          asset_content_type: application/octet-stream
-
-      - name: Upload Release Assets - Linux amd64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: apkrash_linux_amd64/apkrash_linux_amd64
-          asset_name: apkrash_linux_amd64
-          asset_content_type: application/octet-stream
-
-      - name: Upload Release Assets - Windows 386
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: apkrash_windows_386/apkrash_windows_386
-          asset_name: apkrash_windows_386
-          asset_content_type: application/octet-stream
-
-      - name: Upload Release Assets - Windows amd64
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} 
-          asset_path: apkrash_windows_amd64/apkrash_windows_amd64
-          asset_name: apkrash_windows_amd64
-          asset_content_type: application/octet-stream
-
