--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -23,5 +23,6 @@ jobs:
           distribution: goreleaser
           version: latest
           args: release --rm-dist
+          workdir: cmd/
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
