--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -6,6 +6,11 @@ on:
       - main
   pull_request:
 
+permissions:
+  actions: read
+  contents: read
+  security-events: write
+
 jobs:
   SAST:
     runs-on: ubuntu-latest
@@ -45,3 +50,11 @@ jobs:
         with:
           go-version-input: 1.23.6
           go-package: ./...
+          output-format: sarif
+          output-file: results.sarif
+
+      - name: Upload SARIF file
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: results.sarif
+          category: SCA
